# word-alchemy

./: app.py  database.py  pyproject.toml  requirements.txt
static/: new.css  style.css
templates/: article_accepted.html  articles.html  home.html  indi_article.html  intro_para.html  nav.html  read_article.html  write.html  write_form.html
